created problems with their solutions
exercises for pyspark

--- a/Solution 1.ipynb
+++ b/Solution 1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Problem 4: Map and flatMap examples"
+    "## Problem 1: Parallelize a list of items."
    ]
   },
   {
@@ -16,11 +16,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pyspark import SparkContext, SparkConf"
+    "from pyspark import SparkContext, SparkConf                                       "
    ]
   },
   {
@@ -32,12 +32,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# build a SparkConf object that contains information about your application\n",
-    "conf = SparkConf().setAppName(\"problem4\").setMaster(\"local[*]\") \n",
+    "conf = SparkConf().setAppName(\"problem1\").setMaster(\"local[*]\") \n",
     "sc = SparkContext(conf=conf) "
    ]
   },
@@ -45,83 +45,93 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Generate a list of data, from 1 to 10"
+    "##  TODO: Create Parallelized Collections"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = list(range(1,11))\n",
-    "print(data)"
+    "data = [1, 2, 3, 4, 5]\n",
+    "distData = sc.parallelize(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pyspark.rdd.RDD"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(distData)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Parallelize the data with 2 partitions"
+    "## TODO: Print all the data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "rdd = sc.parallelize(data,2)"
+    "# use collect() to bring RDD contents back to the driver\n",
+    "distData.collect()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## TODO: Multiply by 2 every integer between 1 to 10, then print the data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## TODO: For each integer create a string containing this integer, print the strings"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## TODO: For each integer compute a square and a cube value, then print"
+    "## Optional: Try this--"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Hint: use flatMap -- Similar to map, but each input item can be mapped to 0 or more output items (so func should return a Seq rather than a single item)."
+    "#### foreach() applies a function to all RDD elements. In this case, we applied a print function to each element in the parallelized RDD. \n",
+    "#### You will find the output in the terminal where you opened this Jupyter Notebook. What did you notice about the output? If you run this cell again, do you get the same or different output? Think why."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def g(x): \n",
+    "    print(x)\n",
+    "    \n",
+    "distData.foreach(g)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -132,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
